[package]
name = "antenna"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.11.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = ["json"] }
sea-orm = { version = "1.1.14", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros"] }
serde_json = "1.0.142"
futures = "0.3.31"
